fix(board buttons): buttons would wrap incorrectly on small window width

--- a/src/components/board-buttons/board-buttons.module.css
+++ b/src/components/board-buttons/board-buttons.module.css
@@ -29,9 +29,6 @@
 }
 
 .desktopBoardButtons {
-  display: flex;
-  align-items: center;
-  justify-content: space-between; /* Ensure elements are spaced out properly */
   padding-right: 5px;
 }
 
@@ -42,9 +39,7 @@
 }
 
 .desktopBoardButtons .rightSideButtons {
-  margin-left: auto; /* Push the right-side buttons to the right */
-  display: flex;
-  align-items: center;
+  float: right;
 }
 
 .desktopBoardButtons .rightSideButtons select {
